# cpp_deps_analyzer

./: CMakeLists.txt  README.md  run.sh
app/: CMakeLists.txt  main.cpp
include/: dependency_analyzer.h  file_parser.h
src/: CMakeLists.txt  dependency_analyzer.cpp  file_parser.cpp
tests/: CMakeLists.txt  test_main.cpp
